--- a/DotNetCoreVueTemplate.CoreApp/DotNetCoreVueTemplate.CoreApp.csproj
+++ b/DotNetCoreVueTemplate.CoreApp/DotNetCoreVueTemplate.CoreApp.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
