--- a/DotNetCoreVueTemplate.CoreApp/appsettings.Development.json
+++ b/DotNetCoreVueTemplate.CoreApp/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CSP-Headers": {
+    "CSP": "default-src 'self'; frame-ancestors 'self'; frame-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; form-action 'self'; ",
+    "X-Frame-Options": "SAMESITE"
   }
 }
