--- a/DotNetCoreVueTemplate.CoreApp/DotNetCoreVueTemplate.CoreApp.csproj
+++ b/DotNetCoreVueTemplate.CoreApp/DotNetCoreVueTemplate.CoreApp.csproj
@@ -12,6 +12,9 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="VueCliMiddleware" Version="5.0.0" />
