--- a/DotNetCoreVueTemplate.CoreApp/appsettings.Development.json
+++ b/DotNetCoreVueTemplate.CoreApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLExpress;Database=DotNetCoreVueTemplate;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
