unignored njsproj file
(cherry picked from commit d5243f39a8ef928958b290da22d4c99d9c1a1a46)

--- a/DotNetCoreVueTemplate.ClientApp/.gitignore
+++ b/DotNetCoreVueTemplate.ClientApp/.gitignore
@@ -18,6 +18,6 @@ pnpm-debug.log*
 .vscode
 *.suo
 *.ntvs*
-*.njsproj
-*.sln
+#*.njsproj # this is not excluded, so that you can see the project in the visual studio
+#*.sln
 *.sw?
